# endpoint-sec

./: .gitignore  Cargo.toml  Justfile  README.md  appveyor.yml  flake.nix
agentsmith-rs/: Cargo.toml  PLAN-menubar-app.md  agent-instructions-sample.md  agentsmith-egress  agentsmith-override  agentsmith-quarantine
agentsmith-rs-core/: Cargo.toml
agentsmith-rs-core/src/: acl.rs  action.rs  audit.rs  client.rs  event.rs  lib.rs  message.rs  mute.rs  utils.rs
agentsmith-rs-core/src/event/: event_access.rs  event_authentication.rs  event_authorization_judgement.rs  event_authorization_petition.rs  event_btm_launch_item_add.rs  event_btm_launch_item_remove.rs  event_chdir.rs  event_chroot.rs  event_clone.rs  event_close.rs  event_copyfile.rs  event_create.rs  event_cs_invalidated.rs  event_deleteextattr.rs  event_dup.rs  event_exchangedata.rs  event_exec.rs  event_exit.rs  event_fcntl.rs  event_file_provider_materialize.rs  event_file_provider_update.rs  event_fork.rs  event_fsgetpath.rs  event_get_task.rs  event_get_task_inspect.rs  event_get_task_name.rs  (+76 more)
agentsmith-rs-core/tests/: client.rs
agentsmith-rs-sys/: Cargo.toml
agentsmith-rs-sys/src/: lib.rs
agentsmith-rs/menubar-app/: .gitignore  Makefile  Package.swift
agentsmith-rs/src/: main.rs
codex-es-guard/: Cargo.toml  PLAN-menubar-app.md  agent-instructions-sample.md  es-guard-egress  es-guard-override  es-guard-quarantine
codex-es-guard/menubar-app/: Makefile  Package.swift
codex-es-guard/src/: main.rs
docs/plans/: 2026-03-03-codex-sensitive-data-guard-c-verification.md
src/: main.rs
(+34 files in other folders)
