[workspace.package]
version = "0.4.3"
authors = ["HarfangLab Rust Team"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/jiaqiwang969/AgentSmith-RS"
rust-version = "1.76"

[workspace]
members = ["agentsmith-rs-core/", "agentsmith-rs-sys/", "agentsmith-rs/"]
resolver = "2"

[workspace.dependencies]
# In workspace
agentsmith-rs-core = { version = "0.4.0", path = "./agentsmith-rs-core" }
agentsmith-rs-sys = { version = "0.4.0", path = "./agentsmith-rs-sys" }

# External - Required
block2 = "0.6"
libc = { version = "0.2", features = ["extra_traits"] }
mach2 = "0.5"
objc2 = "0.6"
static_assertions = "1.1"

# External - For tests
sysinfo = "0.28"
trybuild = "1.0"
